[gd_scene load_steps=6 format=2]

[ext_resource path="res://elements/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/bird_flap.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/completetask_0.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/hit (1).ogg" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="BodyColl" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ScoreSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="HitSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="FlapSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
